--- a/css/main.css
+++ b/css/main.css
@@ -63,8 +63,9 @@ nav, .search_wrap, .news_wrap img {display: none}
 /* PC */
 @media all and (min-width:1197px) {
   .container {width: 1196px;}
-  #header {height: 80px;text-align: center;}
+  #header {text-align: center;}
   #header * [class*=mo_] {display: none;}
+  #header #gnb {vertical-align: top;}
   #header h1 {margin-top: 19px;}
   #header h1 a {display: block;}
   #header h1 img {width: 80px;height: 42px}
@@ -98,7 +99,7 @@ nav, .search_wrap, .news_wrap img {display: none}
   #header .mo_gnb_btn span.mid {background: #0072bc}
   #header .mo_gnb_btn span.btm {margin-bottom: 0;background: #85c440}
 
-  .main_visual {background-position: top -200px left -202px;}
+  .main_visual {height: 800px;background-position: top -200px left -202px;}
   .main_visual video {left: -202px;min-width:1600px} /*-202*/ 
 }
 /* Mobile */
