--- a/css/main.css
+++ b/css/main.css
@@ -113,16 +113,17 @@ nav, .search_wrap, .news_wrap img {display: none}
   #header .mo_gnb_btn span {display: block;width: 24px;height: 3px;margin-bottom: 5px;}
   #header .search_btn {width: 18px;height: 18px;margin-right: 33px;background-position: -120px -104px;background-size:150px 225px}
 
-  .main_visual {background-position: top -200px left -440px;}
+  .main_visual {height: 80vh;background-position: top -200px left -440px;}
   .main_visual video {left: -440px;}
-  .main_visual .visual_txt p:nth-child(1) {font-size: 30px;}
-  .main_visual .visual_txt p:nth-child(2) {font-size: 14px;}
+  .main_visual .visual_txt {top:150px}
+  .main_visual .visual_txt p:nth-child(1) {font-size: 30px;margin-bottom: 30px;line-height: 36px;}
+  .main_visual .visual_txt p:nth-child(2) {font-size: 14px;line-height: 18px;}
 
-  .quick_wrap a {height: 210px;padding: 36px 0;font-size: 24px;}
-  .quick_wrap a:before {width: 90px;height: 90px;margin-bottom: 12px;background-size:auto;}
-  .quick_wrap li:nth-child(2) a:before {background-position: 0 -120px;transform:translateX(10px)}
-  .quick_wrap li:nth-child(3) a:before {background-position: 0 -240px;}
-  .quick_wrap li:nth-child(4) a:before {background-position: 0 -360px;}
+  .quick_wrap a {height: 105px;padding: 18px 0;font-size: 12px;}
+  .quick_wrap a:before {width: 45px;height: 45px;margin-bottom: 6px;background-size:150px 225px;}
+  .quick_wrap li:nth-child(2) a:before {background-position: 0 -60px;transform:translateX(5px)}
+  .quick_wrap li:nth-child(3) a:before {background-position: 0 -120px;}
+  .quick_wrap li:nth-child(4) a:before {background-position: 0 -180px;}
 
   .business_wrap {padding-top: 64px;}
   .business_wrap h2, .management_wrap h2 {margin-bottom: 15px;font-size: 60px;}
