--- a/css/main.css
+++ b/css/main.css
@@ -113,27 +113,29 @@ nav, .search_wrap, .news_wrap img {display: none}
   #header .mo_gnb_btn span {display: block;width: 24px;height: 3px;margin-bottom: 5px;}
   #header .search_btn {width: 18px;height: 18px;margin-right: 33px;background-position: -120px -104px;background-size:150px 225px}
 
-  .main_visual {background-position: top -200px left -440px;}
+  .main_visual {height: 500px;background-position: top -200px left -440px;}
   .main_visual video {left: -440px;}
-  .main_visual .visual_txt p:nth-child(1) {font-size: 30px;}
-  .main_visual .visual_txt p:nth-child(2) {font-size: 14px;}
+  .main_visual .visual_txt {top:150px}
+  .main_visual .visual_txt p:nth-child(1) {font-size: 30px;margin-bottom: 30px;line-height: 36px;}
+  .main_visual .visual_txt p:nth-child(2) {font-size: 14px;line-height: 18px;}
 
-  .quick_wrap a {height: 210px;padding: 36px 0;font-size: 24px;}
-  .quick_wrap a:before {width: 90px;height: 90px;margin-bottom: 12px;background-size:auto;}
-  .quick_wrap li:nth-child(2) a:before {background-position: 0 -120px;transform:translateX(10px)}
-  .quick_wrap li:nth-child(3) a:before {background-position: 0 -240px;}
-  .quick_wrap li:nth-child(4) a:before {background-position: 0 -360px;}
+  .quick_wrap a {height: 105px;padding: 18px 0;font-size: 12px;}
+  .quick_wrap a:before {width: 45px;height: 45px;margin-bottom: 6px;background-size:150px 225px;}
+  .quick_wrap li:nth-child(2) a:before {background-position: 0 -60px;transform:translateX(2px)}
+  .quick_wrap li:nth-child(3) a:before {background-position: 0 -120px;}
+  .quick_wrap li:nth-child(4) a:before {background-position: 0 -180px;}
 
-  .business_wrap {padding-top: 64px;}
-  .business_wrap h2, .management_wrap h2 {margin-bottom: 15px;font-size: 60px;}
-  .business_wrap h2 span, .management_wrap h2 span {margin-bottom: 1px;font-size: 24px;}
-  .business_wrap h2+p, .management_wrap h2+p {margin-bottom: 40px;font-size: 30px;}
+  .business_wrap {padding-top: 32px;}
+  .business_wrap img {opacity: 0;}
+  .business_wrap h2, .management_wrap h2 {margin-bottom: 8px;font-size: 30px;}
+  .business_wrap h2 span, .management_wrap h2 span {font-size: 12px;}
+  .business_wrap h2+p, .management_wrap h2+p {margin-bottom: 20px;font-size: 16px;}
   .business_wrap .busi_img {padding-top: 67.28395061%;background-image:url(../img/gs_global.jpg);background-size: cover;background-repeat: no-repeat;}
   .business_wrap .busi_title {background:#f36422;}
-  .business_wrap h3 {line-height: 106px;font-size: 36px;font-weight: bold;color: #FFF;}
+  .business_wrap h3 {line-height: 53px;font-size: 18px;font-weight: bold;color: #FFF;}
   .business_wrap h3 span {display: none;}
-  .business_wrap .busi_fam {margin-bottom: 40px;border: 1px solid #ccc;border-top: none;}
+  .business_wrap .busi_fam {margin-bottom: 20px;border: 1px solid #ccc;border-top: none;}
   .business_wrap .busi_fam li {float: left;width: 50%;}
-  .business_wrap .busi_fam li a {display: block;width: 100%;font-size: 29px;line-height: 100px;}
-  .business_wrap .busi_fam li a:before {content:'';display: inline-block;vertical-align: 7px;width: 6px;height: 6px;margin-right: 8px;background-color: #f36422;}
+  .business_wrap .busi_fam li a {display: block;width: 100%;font-size: 15px;line-height: 50px;}
+  .business_wrap .busi_fam li a:before {content:'';display: inline-block;vertical-align: 3px;width: 3px;height: 3px;margin-right: 4px;background-color: #f36422;}
 }
