--- a/css/main.css
+++ b/css/main.css
@@ -38,7 +38,7 @@ nav, .search_wrap, .news_wrap img {display: none}
 
 /* Main Visual */
 .main_visual {overflow: hidden;position: relative;height: 830px;background: url(../img/video_thumb.jpg) top center no-repeat;}
-.main_visual video {display: none;position: absolute;top:0;min-width:1600px;}
+.main_visual video {display: block;position: absolute;top:0;min-width:1600px;}
 .main_visual .visual_txt {position: absolute;top: 200px;color: #FFF;}
 .main_visual .visual_txt p:nth-child(1) {font-size: 60px;margin-bottom: 60px;line-height: 72px;font-weight: bold;}
 .main_visual .visual_txt p:nth-child(2) {font-size: 26px;line-height: 36px;}
@@ -59,6 +59,9 @@ nav, .search_wrap, .news_wrap img {display: none}
 .business_wrap h2, .management_wrap h2 {margin-bottom: 8px;font-size: 40px;font-weight: bold;}
 .business_wrap h2 span, .management_wrap h2 span {display: block;margin-bottom: 1px;font-size: 16px;font-weight: bold;color: #099;}
 .business_wrap h2+p, .management_wrap h2+p {font-size: 20px;white-space: nowrap;}
+.business_wrap .business>li:nth-child(1) .busi_title {background:#f36422}
+.business_wrap .business>li:nth-child(2) .busi_title {background:#0072bc}
+.business_wrap .business>li:nth-child(3) .busi_title {background:#85c440}
 
 /* PC */
 @media all and (min-width:1197px) {
@@ -92,7 +95,7 @@ nav, .search_wrap, .news_wrap img {display: none}
   #header h1 {margin-top: 20px;}
   #header h1 a {display: block;width: 100px;height: 52px}
   #header .util {margin-top: 28px;}
-  #header .search_btn {width: 36px;height: 36px;margin-right: 66px;background-position: -240px -209px}
+  #header .search_btn {width: 36px;height: 36px;margin-right: 66px;background-position: -240px -210px}
   #header .pc_lang_area {display: none;}
   #header .mo_gnb_btn span {display: block;width: 48px;height: 6px;margin-bottom: 9px}
   #header .mo_gnb_btn span.top {background: #f36422}
@@ -105,35 +108,40 @@ nav, .search_wrap, .news_wrap img {display: none}
 /* Mobile */
 @media all and (max-width:720px) {
   .mo_br {display: inline;}
-  .mo_blind {display: none;}
+  .mo_blind, .mo_busi_paging, .btns {display: none;}
 
   #header h1 {margin-top: 10px;}
   #header h1 img {width: 56px;height: 30px}
   #header .util {margin-top: 14px;}
   #header .mo_gnb_btn span {display: block;width: 24px;height: 3px;margin-bottom: 5px;}
-  #header .search_btn {width: 18px;height: 18px;margin-right: 33px;background-position: -120px -104px;background-size:150px 225px}
+  #header .search_btn {width: 18px;height: 18px;margin-right: 33px;background-position: -120px -105px;background-size:150px 225px}
 
-  .main_visual {background-position: top -200px left -440px;}
-  .main_visual video {left: -440px;}
-  .main_visual .visual_txt p:nth-child(1) {font-size: 30px;}
-  .main_visual .visual_txt p:nth-child(2) {font-size: 14px;}
+  .main_visual {height: 500px;background-position: top -200px left -440px;}
+  .main_visual video {left: -330px;top:-100px;min-width: 1200px;}
+  .main_visual .visual_txt {top:150px}
+  .main_visual .visual_txt p:nth-child(1) {font-size: 30px;margin-bottom: 30px;line-height: 36px;}
+  .main_visual .visual_txt p:nth-child(2) {font-size: 14px;line-height: 18px;}
 
-  .quick_wrap a {height: 210px;padding: 36px 0;font-size: 24px;}
-  .quick_wrap a:before {width: 90px;height: 90px;margin-bottom: 12px;background-size:auto;}
-  .quick_wrap li:nth-child(2) a:before {background-position: 0 -120px;transform:translateX(10px)}
-  .quick_wrap li:nth-child(3) a:before {background-position: 0 -240px;}
-  .quick_wrap li:nth-child(4) a:before {background-position: 0 -360px;}
+  .quick_wrap a {height: 105px;padding: 18px 0;font-size: 12px;font-weight: 500;}
+  .quick_wrap a:before {width: 45px;height: 45px;margin-bottom: 6px;background-size:150px 225px;}
+  .quick_wrap li:nth-child(2) a:before {background-position: 0 -60px;transform:translateX(4px)}
+  .quick_wrap li:nth-child(3) a:before {background-position: 0 -120px;}
+  .quick_wrap li:nth-child(4) a:before {background-position: 0 -180px;}
 
-  .business_wrap {padding-top: 64px;}
-  .business_wrap h2, .management_wrap h2 {margin-bottom: 15px;font-size: 60px;}
-  .business_wrap h2 span, .management_wrap h2 span {margin-bottom: 1px;font-size: 24px;}
-  .business_wrap h2+p, .management_wrap h2+p {margin-bottom: 40px;font-size: 30px;}
+  .business_wrap {padding-top: 32px;}
+  .business_wrap img {opacity: 0;}
+  .business_wrap h2, .management_wrap h2 {font-size: 30px;}
+  .business_wrap h2 span, .management_wrap h2 span {font-size: 12px;}
+  .business_wrap h2+p, .management_wrap h2+p {margin-bottom: 20px;font-size: 16px;}
   .business_wrap .busi_img {padding-top: 67.28395061%;background-image:url(../img/gs_global.jpg);background-size: cover;background-repeat: no-repeat;}
-  .business_wrap .busi_title {background:#f36422;}
-  .business_wrap h3 {line-height: 106px;font-size: 36px;font-weight: bold;color: #FFF;}
+  
+  .business_wrap h3 {line-height: 54px;font-size: 20px;font-weight: bold;color: #FFF;}
   .business_wrap h3 span {display: none;}
-  .business_wrap .busi_fam {margin-bottom: 40px;border: 1px solid #ccc;border-top: none;}
+  .business_wrap .busi_fam {margin-bottom: 20px;border: 1px solid #ccc;border-top: none;}
   .business_wrap .busi_fam li {float: left;width: 50%;}
-  .business_wrap .busi_fam li a {display: block;width: 100%;font-size: 29px;line-height: 100px;}
-  .business_wrap .busi_fam li a:before {content:'';display: inline-block;vertical-align: 7px;width: 6px;height: 6px;margin-right: 8px;background-color: #f36422;}
+  .business_wrap .busi_fam li a {display: block;width: 100%;font-size: 16px;line-height: 50px;}
+  .business_wrap .busi_fam li a:before {content:'';display: inline-block;vertical-align: 5px;width: 3px;height: 3px;margin-right: 5px;}
+  .business_wrap .business>li:nth-child(1) .busi_fam li a:before {background-color: #f36422;}
+  .business_wrap .business>li:nth-child(2) .busi_fam li a:before {background-color: #0072bc;}
+  .business_wrap .business>li:nth-child(3) .busi_fam li a:before {background-color: #85c440;}
 }
