--- a/css/main.css
+++ b/css/main.css
@@ -47,7 +47,7 @@ nav, .search_wrap, .news_wrap img {display: none}
 .quick_wrap {background-image:linear-gradient(to right,#00ab75,#0072bc);}
 .quick_wrap li {float: left;width: 25%;}
 .quick_wrap a {display: block;box-sizing: border-box;height: 140px;padding: 26px 0;text-align: center;font-size: 18px;color: #FFF;}
-.quick_wrap span {display: block;}
+.quick_wrap span {display: block;font-weight: 500;}
 .quick_wrap a:before {content:'';display: inline-block;width: 60px;height: 60px;background-image:url(../img/sprite.png);background-size:200px 300px;}
 .quick_wrap li:nth-child(2) a:before {background-position: 0 -80px;transform:translateX(5px)}
 .quick_wrap li:nth-child(3) a:before {background-position: 0 -160px;}
@@ -103,7 +103,7 @@ nav, .search_wrap, .news_wrap img {display: none}
   #header .mo_gnb_btn span.btm {margin-bottom: 0;background: #85c440}
 
   .main_visual {height: 816px;background-position: top -200px left -202px;}
-  .main_visual video {left: -202px;min-width:1600px} /*-202*/ 
+  .main_visual video {left: -300px;top:-80px;min-width:1600px} /*-202*/ 
 }
 /* Mobile */
 @media all and (max-width:720px) {
@@ -117,12 +117,12 @@ nav, .search_wrap, .news_wrap img {display: none}
   #header .search_btn {width: 18px;height: 18px;margin-right: 33px;background-position: -120px -105px;background-size:150px 225px}
 
   .main_visual {height: 500px;background-position: top -200px left -440px;}
-  .main_visual video {left: -300px;top:-80px;min-width: 1100px;}
+  .main_visual video {min-width: 1100px;}
   .main_visual .visual_txt {top:150px}
   .main_visual .visual_txt p:nth-child(1) {font-size: 30px;margin-bottom: 30px;line-height: 36px;}
   .main_visual .visual_txt p:nth-child(2) {font-size: 14px;line-height: 18px;}
 
-  .quick_wrap a {height: 105px;padding: 18px 0;font-size: 12px;font-weight: 500;}
+  .quick_wrap a {height: 105px;padding: 18px 0;font-size: 12px;}
   .quick_wrap a:before {width: 45px;height: 45px;margin-bottom: 6px;background-size:150px 225px;}
   .quick_wrap li:nth-child(2) a:before {background-position: 0 -60px;transform:translateX(4px)}
   .quick_wrap li:nth-child(3) a:before {background-position: 0 -120px;}
