--- a/css/main.css
+++ b/css/main.css
@@ -56,13 +56,13 @@ section {padding-top: 64px;}
 .business_wrap h2 span, .management_wrap h2 span {display: block;margin-bottom: 1px;font-size: 16px;font-weight: bold;color: #099;}
 .business_wrap h2+p, .management_wrap h2+p {margin-bottom: 30px;font-size: 20px;white-space: nowrap;}
 .business_wrap .business .busi_title {color: #FFF;}
-.business_wrap .slide1 .busi_title {background:#f36422 !important;}
-.business_wrap .slide2 .busi_title {background:#0072bc !important;}
-.business_wrap .slide3 .busi_title {background:#85c440 !important;}
+.business_wrap .business>li:nth-child(1) .busi_title {background:#f36422}
+.business_wrap .business>li:nth-child(2) .busi_title {background:#0072bc}
+.business_wrap .business>li:nth-child(3) .busi_title {background:#85c440}
 .business_wrap .busi_img {padding-top: 67.28395061%;background-size: cover;background-repeat: no-repeat}
-.business_wrap .slide1 .busi_img {background-image:url(../img/gs_global.jpg) !important;}
-.business_wrap .slide2 .busi_img {background-image:url(../img/gs_caltex.jpg) !important;}
-.business_wrap .slide3 .busi_img {background-image:url(../img/gs_construct.jpg) !important;}
+.business_wrap .business>li:nth-child(1) .busi_img {background-image:url(../img/gs_global.jpg)}
+.business_wrap .business>li:nth-child(2) .busi_img {background-image:url(../img/gs_caltex.jpg)}
+.business_wrap .business>li:nth-child(3) .busi_img {background-image:url(../img/gs_construct.jpg)}
 
 /* PC */
 @media all and (min-width:1197px) {
@@ -115,15 +115,12 @@ section {padding-top: 64px;}
   .main_visual video {left: -300px;top:-80px;min-width:1600px}
 
   .swiper-container {width: 100%;}
-  .business_wrap .mo_busi_slider {}
-  .business_wrap .business {}
-  /* .business_wrap .business>li {float: left;width: 100px;margin-right: 30px;} */
-  .business_wrap .business>li:last-child {margin-right: 0;}
 }
 /* Mobile */
 @media all and (max-width:720px) {
   .mo_br {display: inline;}
   .container {width:90%}
+  section {padding-top: 0;}
 
   #header {height: 92px;}
   #header h1 {margin-top: 10px;}
@@ -154,9 +151,10 @@ section {padding-top: 64px;}
   .business_wrap h2, .management_wrap h2 {font-size: 30px;}
   .business_wrap h2 span, .management_wrap h2 span {font-size: 12px;}
   .business_wrap h2+p, .management_wrap h2+p {margin-bottom: 20px;font-size: 16px;}
+  .business_wrap .business>li {margin-bottom: 30px;}
   .business_wrap .busi_img {padding-top: 67.28395061%;}
   .business_wrap h3 {line-height: 54px;font-size: 20px;font-weight: bold;color: #FFF;}
-  .business_wrap .busi_fam {margin-bottom: 20px;border: 1px solid #ccc;border-top: none;}
+  .business_wrap .busi_fam {border: 1px solid #ccc;border-top: none;}
   .business_wrap .busi_fam li {float: left;width: 50%;}
   .business_wrap .busi_fam li a {display: block;width: 100%;font-size: 16px;line-height: 50px;}
   .business_wrap .busi_fam li a:before {content:'';display: inline-block;vertical-align: 5px;width: 3px;height: 3px;margin-right: 5px;}
