--- a/css/main.css
+++ b/css/main.css
@@ -56,6 +56,8 @@ section {padding-top: 64px;}
 .business_wrap h2 span, .management_wrap h2 span {display: block;margin-bottom: 1px;font-size: 16px;font-weight: bold;color: #099;}
 .business_wrap h2+p, .management_wrap h2+p {margin-bottom: 30px;font-size: 20px;white-space: nowrap;}
 .business_wrap .business .busi_title {color: #FFF;}
+.business_wrap h3 {font-weight: bold;}
+
 .business_wrap .business>li:nth-child(1) .busi_title {background:#f36422}
 .business_wrap .business>li:nth-child(2) .busi_title {background:#0072bc}
 .business_wrap .business>li:nth-child(3) .busi_title {background:#85c440}
@@ -63,6 +65,7 @@ section {padding-top: 64px;}
 .business_wrap .business>li:nth-child(1) .busi_img {background-image:url(../img/gs_global.jpg)}
 .business_wrap .business>li:nth-child(2) .busi_img {background-image:url(../img/gs_caltex.jpg)}
 .business_wrap .business>li:nth-child(3) .busi_img {background-image:url(../img/gs_construct.jpg)}
+.business_wrap .business>li:last-child {margin-right: 0;}
 
 /* PC */
 @media all and (min-width:1197px) {
@@ -91,14 +94,13 @@ section {padding-top: 64px;}
 
   .business_wrap .mo_blind, .business_wrap h3 span {display: block;}
   .business_wrap .business>li {float: left;width: 372px;margin-right: 40px;}
-  .business_wrap .business>li:last-child {margin-right: 0;}
   .business_wrap .business>li .busi_img {width: 100%;height: 250px;padding-top: 0;}
   
 
 }
 /* Tablet */
 @media all and (min-width:721px) and (max-width:1196px) {
-  .container {width:90%}
+  .container {width:94%}
 
   #header {height: 92px;}
   #header h1 {margin-top: 20px;}
@@ -113,8 +115,9 @@ section {padding-top: 64px;}
 
   .main_visual {height: 816px;background-position: top -200px left -202px;}
   .main_visual video {left: -300px;top:-80px;min-width:1600px}
-
-  .swiper-container {width: 100%;}
+  
+  .business_wrap .business>li {float: left;width: calc(33.33333333% - 2%);margin-right: 3%;}
+  .business_wrap h3 {line-height: 60px;font-size: 20px;}
 }
 /* Mobile */
 @media all and (max-width:720px) {
@@ -153,7 +156,7 @@ section {padding-top: 64px;}
   .business_wrap h2+p, .management_wrap h2+p {margin-bottom: 20px;font-size: 16px;}
   .business_wrap .business>li {margin-bottom: 30px;}
   .business_wrap .busi_img {padding-top: 67.28395061%;}
-  .business_wrap h3 {line-height: 54px;font-size: 20px;font-weight: bold;color: #FFF;}
+  .business_wrap h3 {line-height: 54px;font-size: 20px;}
   .business_wrap .busi_fam {border: 1px solid #ccc;border-top: none;}
   .business_wrap .busi_fam li {float: left;width: 50%;}
   .business_wrap .busi_fam li a {display: block;width: 100%;font-size: 16px;line-height: 50px;}
