--- a/css/main.css
+++ b/css/main.css
@@ -51,15 +51,14 @@ section {padding-top: 64px;}
 .quick_wrap li:nth-child(3) a:before {background-position: 0 -160px;}
 .quick_wrap li:nth-child(4) a:before {background-position: 0 -240px;}
 
-.business_wrap, .management_wrap {text-align: center;}
-.business_wrap h2, .management_wrap h2 {margin-bottom: 8px;font-size: 40px;font-weight: bold;}
-.business_wrap h2 span, .management_wrap h2 span {display: block;margin-bottom: 1px;font-size: 16px;font-weight: bold;color: #099;}
-.business_wrap h2+p, .management_wrap h2+p {margin-bottom: 30px;font-size: 20px;white-space: nowrap;}
+.business_wrap h2, .management_wrap h2 {margin-bottom: 8px;font-size: 40px;font-weight: bold;text-align: center;}
+.business_wrap h2 span, .management_wrap h2 span, .news_wrap h2 span {display: block;margin-bottom: 1px;font-size: 16px;font-weight: bold;color: #099;}
+.business_wrap h2+p, .management_wrap h2+p {margin-bottom: 30px;font-size: 20px;white-space: nowrap;text-align: center;}
 .business_wrap h3 {font-weight: bold;color: #FFF}
 
-.business_wrap .business>li:nth-child(1) h3 {background:#f36422}
-.business_wrap .business>li:nth-child(2) h3 {background:#0072bc}
-.business_wrap .business>li:nth-child(3) h3 {background:#85c440}
+.business_wrap .business>li:nth-child(1) .busi_title {background:#f36422}
+.business_wrap .business>li:nth-child(2) .busi_title {background:#0072bc}
+.business_wrap .business>li:nth-child(3) .busi_title {background:#85c440}
 .business_wrap .busi_img {padding-top: 67.28395061%;background-size: cover;background-repeat: no-repeat}
 .business_wrap .business>li:nth-child(1) .busi_img {background-image:url(../img/gs_global.jpg)}
 .business_wrap .business>li:nth-child(2) .busi_img {background-image:url(../img/gs_caltex.jpg)}
@@ -95,12 +94,16 @@ section {padding-top: 64px;}
   .business_wrap .business>li {float: left;width: 372px;margin-right: 40px}
   .business_wrap .business>li .busi_img {width: 100%;height: 250px;padding-top: 0}
 
-  .business_wrap .busi_title {}
-  .business_wrap h3 {position: relative;box-sizing:border-box;padding: 18px 0;font-size: 24px;}
-  .business_wrap h3:before {content:'';display: block;position: absolute;width: 60px;height: 60px;background-image:url(../img/sprite.png);background-position: -100px 0;}
-  .business_wrap h3 span {font-weight: 300;font-size: 20px;}
-  
-
+  .business_wrap .busi_title {display: flex;justify-content: center;width: 372px;background-color: #f36422;}
+  .business_wrap .busi_title:before {content:'';display: block;width: 60px;height: 60px;align-self:center;background-image:url(../img/sprite.png);}
+  .business_wrap h3 {display: flex;flex-direction:column;justify-content:center;box-sizing:border-box;margin-left: 24px;padding: 18px 0;font-size: 24px;text-align: center;}
+  .business_wrap .business li:nth-child(1) .busi_title:before {background-position: -100px 0;}
+  .business_wrap .business li:nth-child(2) .busi_title:before {background-position: -100px -70px;}
+  .business_wrap .business li:nth-child(3) .busi_title:before {background-position: -100px -140px;}
+  .business_wrap .business .busi_title h3 span {font-weight: 300;font-size: 20px;}
+  .business_wrap .busi_fam {display: flex;justify-content:space-around;margin-bottom: 25px;border-bottom: 1px solid #ccc;}
+  .business_wrap .busi_fam li a {display: block;line-height: 71px;font-size: 18px;}
+  .business_wrap .business p {box-sizing:border-box;text-align: left;padding: 0 10px;}
 }
 /* Tablet */
 @media all and (min-width:721px) and (max-width:1196px) {
@@ -121,7 +124,12 @@ section {padding-top: 64px;}
   .main_visual video {left: -300px;top:-80px;min-width:1600px}
   
   .business_wrap .business>li {float: left;width: calc(33.33333333% - 2%);margin-right: 3%;}
-  .business_wrap h3 {line-height: 60px;font-size: 20px;}
+  .business_wrap h3 {position: absolute;left: 50%;top: 50%;transform:translate(-50%, -50%);font-size: 22px;white-space: nowrap;}
+  .business_wrap .busi_title {position: relative;left: 0;right: 0;padding-top: 14.72222222%;min-height:20px;}
+  .business_wrap .busi_fam {display: flex;flex-flow:row wrap;border: 1px solid #ccc;border-top: none;}
+  .business_wrap .busi_fam li {width: 50%;}
+  .business_wrap .busi_fam li a {position: relative;display: block;padding-top: 50%;}
+  .business_wrap .busi_fam li span {display: inline-block;line-height: 20px;position: absolute;left: 50%;top: 50%;transform:translate(-50%, -50%);font-size: 18px;white-space: nowrap;}
 }
 /* Mobile */
 @media all and (max-width:720px) {
@@ -144,10 +152,10 @@ section {padding-top: 64px;}
   .main_visual {height: 500px;background-position: top -200px left -440px;}
   .main_visual video {min-width: 1100px;left: -300px;top:-80px;}
   .main_visual .visual_txt {top:150px}
-  .main_visual .visual_txt p:nth-child(1) {font-size: 30px;margin-bottom: 30px;line-height: 36px;}
-  .main_visual .visual_txt p:nth-child(2) {font-size: 14px;line-height: 18px;}
+  .main_visual .visual_txt p:nth-child(1) {font-size: 34px;margin-bottom: 30px;line-height: 44px;}
+  .main_visual .visual_txt p:nth-child(2) {font-size: 16px;line-height: 22px;}
 
-  .quick_wrap a {height: 100px;padding: 17px 0;font-size: 12px;}
+  .quick_wrap a {height: 100px;padding: 17px 0;font-size: 14px;}
   .quick_wrap a:before {width: 45px;height: 45px;margin-bottom: 3px;background-size:150px 225px;}
   .quick_wrap li:nth-child(2) a:before {background-position: 0 -60px;transform:translateX(4px)}
   .quick_wrap li:nth-child(3) a:before {background-position: 0 -120px;}
@@ -160,12 +168,14 @@ section {padding-top: 64px;}
   .business_wrap h2+p, .management_wrap h2+p {margin-bottom: 20px;font-size: 16px;}
   .business_wrap .business>li {margin-bottom: 30px;}
   .business_wrap .busi_img {padding-top: 67.28395061%;}
-  .business_wrap h3 {line-height: 54px;font-size: 20px;}
-  .business_wrap .busi_fam {border: 1px solid #ccc;border-top: none;}
-  .business_wrap .busi_fam li {float: left;width: 50%;}
-  .business_wrap .busi_fam li a {display: block;width: 100%;font-size: 16px;line-height: 50px;}
-  .business_wrap .busi_fam li a:before {content:'';display: inline-block;vertical-align: 5px;width: 3px;height: 3px;margin-right: 5px;}
-  .business_wrap .business>li:nth-child(1) .busi_fam li a:before {background-color: #f36422;}
-  .business_wrap .business>li:nth-child(2) .busi_fam li a:before {background-color: #0072bc;}
-  .business_wrap .business>li:nth-child(3) .busi_fam li a:before {background-color: #85c440;}
+  .business_wrap .busi_title {position: relative;left: 0;right: 0;padding-top: 20%;}
+  .business_wrap h3 {position: absolute;left: 50%;top: 50%;transform:translate(-50%, -50%);font-size: 28px;white-space: nowrap;}
+  .business_wrap .busi_fam {display: flex;flex-flow:row wrap;border: 1px solid #ccc;border-top: none;}
+  .business_wrap .busi_fam li {width: 50%;}
+  .business_wrap .busi_fam li a {position: relative;display: block;padding-top: 36%;}/*30.95975232%*/
+  .business_wrap .busi_fam li span {display: inline-block;line-height: 20px;position: absolute;left: 50%;top: 50%;transform:translate(-50%, -50%);font-size: 20px;}
+  .business_wrap .busi_fam li span:before {content:'';display: block;position: absolute;left: -12%;top: 50%;transform:translateY(-75%);width: 4px;height: 4px;background-color: #f36422;}
+  .business_wrap .business>li:nth-child(1) .busi_fam li span:before {background-color: #f36422;}
+  .business_wrap .business>li:nth-child(2) .busi_fam li span:before {background-color: #0072bc;}
+  .business_wrap .business>li:nth-child(3) .busi_fam li span:before {background-color: #85c440;}
 }
