--- a/css/main.css
+++ b/css/main.css
@@ -14,19 +14,19 @@ ul, ol {list-style: none}
 
 /* Common */
 body * {font-family: Arial, 'Noto Sans KR', sans-serif;font-weight: normal;font-size: inherit}
-img, button {display: block}
+img, button, a {display: block}
 button {border: none;background: none;font:inherit;cursor: pointer}
 video {width: 100%;}
 nav, .search_wrap, .news_wrap img, .mo_br, .depth_2, .mo_blind, .business_wrap h3 span {display: none}
+.clearfix:after {content:'';display: block;clear: both;}
 
 .container {margin: 0 auto;}
-.clearfix:after {content:'';display: block;clear: both;}
+section {padding-top: 64px;}
 .skip_nav a {position: absolute;left: 0;right: 0;top: -60px;z-index: 999;background-color: #099;line-height: 60px;text-align: center;font-size: 20px;color:#FFF}
 .skip_nav a:focus {top:0}
 .blind {overflow: hidden;width: 0;height: 0;font-size: 0}
-section {padding-top: 64px;}
-
-.swiper-button-prev {bottom: -300px;}
+img[src*=transparent] {display: block;width: 0;height: 0;font-size: 0;opacity: 0;}
+.pc_gs {display: none;}
 
 /* header */
 #gnb b {font-weight: bold}
@@ -36,24 +36,24 @@ section {padding-top: 64px;}
 #header .util {float: right;}
 #header .util>* {float: right;}
 
-.main_visual {overflow: hidden;position: relative;height: 830px;background: url(../img/video_thumb.jpg) top center no-repeat;}
-.main_visual video {display: block;position: absolute;top:0;min-width:1600px;}
-.main_visual .visual_txt {position: absolute;top: 200px;color: #FFF;}
+.main_visual {overflow: hidden;position: relative;background: url(../img/video_thumb.jpg) top center no-repeat;}
+.main_visual video {display: block;position: absolute;top:50%;left: 50%;transform:translate(-50%, -50%)}
+.main_visual .visual_txt {position: absolute;top:25%;left: 50%;transform:translateX(-50%);width: 100%;color: #FFF}
 .main_visual .visual_txt p:nth-child(1) {font-size: 60px;margin-bottom: 60px;line-height: 72px;font-weight: bold;}
 .main_visual .visual_txt p:nth-child(2) {font-size: 26px;line-height: 36px;}
 
 .quick_wrap {background-image:linear-gradient(to right,#00ab75,#0072bc);}
 .quick_wrap li {float: left;width: 25%;}
-.quick_wrap a {display: block;box-sizing: border-box;height: 140px;padding: 26px 0;text-align: center;font-size: 18px;color: #FFF;}
+.quick_wrap a {box-sizing: border-box;height: 140px;padding: 26px 0;text-align: center;font-size: 18px;color: #FFF;}
 .quick_wrap span {display: block;font-weight: 500;}
 .quick_wrap a:before {content:'';display: inline-block;width: 60px;height: 60px;background-image:url(../img/sprite.png);background-size:200px 300px;}
 .quick_wrap li:nth-child(2) a:before {background-position: 0 -80px;transform:translateX(5px)}
 .quick_wrap li:nth-child(3) a:before {background-position: 0 -160px;}
 .quick_wrap li:nth-child(4) a:before {background-position: 0 -240px;}
 
-.business_wrap h2, .management_wrap h2 {margin-bottom: 8px;font-size: 40px;font-weight: bold;text-align: center;}
-.business_wrap h2 span, .management_wrap h2 span, .news_wrap h2 span {display: block;margin-bottom: 1px;font-size: 16px;font-weight: bold;color: #099;}
-.business_wrap h2+p, .management_wrap h2+p {margin-bottom: 30px;font-size: 20px;white-space: nowrap;text-align: center;}
+.business_wrap h2, .manage_wrap h2 {margin-bottom: 8px;font-size: 40px;font-weight: bold;text-align: center;}
+.business_wrap h2 span, .manage_wrap h2 span, .news_wrap h2 span {display: block;margin-bottom: 1px;font-size: 16px;font-weight: bold;color: #099;}
+.business_wrap h2+p, .manage_wrap h2+p {margin-bottom: 30px;font-size: 20px;white-space: nowrap;text-align: center;}
 .business_wrap h3 {font-weight: bold;color: #FFF}
 
 .business_wrap .business>li:nth-child(1) .busi_title {background:#f36422}
@@ -64,6 +64,29 @@ section {padding-top: 64px;}
 .business_wrap .business>li:nth-child(2) .busi_img {background-image:url(../img/gs_caltex.jpg)}
 .business_wrap .business>li:nth-child(3) .busi_img {background-image:url(../img/gs_construct.jpg)}
 .business_wrap .business>li:last-child {margin-right: 0;}
+
+.manage_wrap {padding-bottom: 79px;}
+.manage_wrap .manage_slider {display: flex;justify-content: space-between;}
+.manage_wrap .mng_img {padding-top: 67.20430107%;}
+.manage_wrap .slide .mng_img {background-image: url(../img/manage_01.jpg);background-size: cover;}
+.manage_wrap .slide1 .mng_img {background-image: url(../img/manage_01.jpg);}
+.manage_wrap .slide2 .mng_img {background-image: url(../img/manage_02.jpg);}
+.manage_wrap .slide3 .mng_img {background-image: url(../img/manage_03.jpg);}
+.manage_wrap .slide4 .mng_img {background-image: url(../img/manage_04.jpg);}
+.manage_wrap .slide5 .mng_img {background-image: url(../img/manage_05.jpg);}
+
+.manage_wrap .slick-list {overflow: hidden;margin: 0 -10px;}
+.manage_wrap .slick-slide {margin: 0 10px;}
+
+.slick-arrow, .slick-dots {font-size: 0;color: transparent;}
+.manage_wrap .slick-arrow {position: absolute;bottom: -79px;transform:translateX(-50%);width: 15px;height: 28px;}
+.manage_wrap .slick-prev {left: calc(50% - 100px);background-image: url(../img/sprite.png);background-position: -200px -330px;}
+.manage_wrap .slick-next {left: calc(50% + 100px);background-image: url(../img/sprite.png);background-position: -200px -292px;}
+
+.manage_wrap .slick-dots li {margin:0 10px}
+.manage_wrap .slick-dots {display: flex;position: absolute;left: 50%;bottom:-70px;transform:translateX(-50%)}
+.manage_wrap .slick-dots button {width: 10px;height: 10px;border-radius:50%;background: #CCC;}
+.manage_wrap .slick-dots .slick-active button {background: #099}
 
 /* PC */
 @media all and (min-width:1197px) {
@@ -76,18 +99,17 @@ section {padding-top: 64px;}
   #header h1 {margin-top: 19px;}
   #header h1 a {display: block;}
   #header h1 img {width: 80px;height: 42px}
-  #header .search_btn {width: 20px;height: 20px;margin:30px 46px 0 0;background-position:-240px -119px}
-  #header .pc_lang_area {overflow: hidden;position: relative;width: 63px;height: 28px;margin-top: 26px;border: 1px solid #FFF;text-transform: uppercase;font-size: 14px;color: #FFF;cursor: pointer;}
-  #header .pc_lang_area ul {position: absolute;top: 0;}
-  #header .pc_lang_area li a {display: block;width: 61px;margin-top: 0;line-height: 26px;text-align: center;}
+  #header .search_btn {width: 20px;height: 20px;margin:30px 46px 0 0;background-position:-240px -120px}
+  #header .pc_lang_area {overflow: hidden;position: relative;box-sizing:border-box;width: 63px;height: 28px;margin-top: 26px;border: 1px solid #FFF;text-transform: uppercase;font-size: 14px;color: #FFF;cursor: pointer;}
+  #header .pc_lang_area ul {position: absolute;left: 0;right: 0;top: 0;}
+  #header .pc_lang_area li a {display: block;margin-top: 0;line-height: 26px;text-align: center;}
   #header nav {display: inline-block;}
   
   #gnb {display: inline-block;}
   #gnb li {float: left;}
   #gnb li>a {display: block;width: 160px;line-height: 80px;color: #FFF;}
 
-  .main_visual {background-position: top -200px left}
-  .main_visual video {top:-8%}
+  .main_visual {padding-top: 43.22916666%;}
   .quick_wrap li:hover a {background-color: #07a}
 
   .business_wrap .mo_blind, .business_wrap h3 span {display: block}
@@ -102,8 +124,18 @@ section {padding-top: 64px;}
   .business_wrap .business li:nth-child(3) .busi_title:before {background-position: -100px -140px;}
   .business_wrap .business .busi_title h3 span {font-weight: 300;font-size: 20px;}
   .business_wrap .busi_fam {display: flex;justify-content:space-around;margin-bottom: 25px;border-bottom: 1px solid #ccc;}
-  .business_wrap .busi_fam li a {display: block;line-height: 71px;font-size: 18px;}
+  .business_wrap .busi_fam li a {line-height: 71px;font-size: 18px;}
   .business_wrap .business p {box-sizing:border-box;text-align: left;padding: 0 10px;}
+
+  .manage_wrap {padding-bottom: 70px;}
+  .manage_wrap .slick-list {margin: 0 -20px;}
+  .manage_wrap .slick-slide {margin: 0 20px;}
+  .manage_wrap .mng_img {width: 100%;height: 250px;padding-top: 0;}
+  .manage_wrap .pc_gs {display: block;}
+
+  .manage_wrap .slick-arrow {width: 20px;height: 38px;top: 50%;bottom: auto;transform:translateY(-50%);}
+  .manage_wrap .slick-prev {left: -50px;background-position: -200px -48px;}
+  .manage_wrap .slick-next {left: auto;right: -50px;background-position: -200px 0;}
 }
 /* Tablet */
 @media all and (min-width:721px) and (max-width:1196px) {
@@ -120,8 +152,8 @@ section {padding-top: 64px;}
   #header .mo_gnb_btn span.mid {background: #0072bc}
   #header .mo_gnb_btn span.btm {margin-bottom: 0;background: #85c440}
 
-  .main_visual {height: 816px;background-position: top -200px left -202px;}
-  .main_visual video {left: -300px;top:-80px;min-width:1600px}
+  .main_visual {padding-top: 80%;}
+  .main_visual video {width: auto;height: 100%;}
 
   .quick_wrap a {font-size: 20px;}
   
@@ -130,7 +162,7 @@ section {padding-top: 64px;}
   .business_wrap .busi_title {position: relative;left: 0;right: 0;padding-top: 14.72222222%;min-height:20px;}
   .business_wrap .busi_fam {display: flex;flex-flow:row wrap;border: 1px solid #ccc;border-top: none;}
   .business_wrap .busi_fam li {width: 50%;}
-  .business_wrap .busi_fam li a {position: relative;display: block;padding-top: 50%;}
+  .business_wrap .busi_fam li a {position: relative;padding-top: 50%;}
   .business_wrap .busi_fam li span {display: inline-block;line-height: 20px;position: absolute;left: 50%;top: 50%;transform:translate(-50%, -50%);font-size: 18px;white-space: nowrap;}
 }
 /* Mobile */
@@ -151,9 +183,9 @@ section {padding-top: 64px;}
   #header .mo_gnb_btn span.mid {background: #0072bc}
   #header .mo_gnb_btn span.btm {margin-bottom: 0;background: #85c440}
   
-  .main_visual {height: 500px;background-position: top -200px left -440px;}
-  .main_visual video {min-width: 1100px;left: -300px;top:-80px;}
-  .main_visual .visual_txt {top:120px}
+  .main_visual {padding-top: 120%;}
+  .main_visual video {width: auto;height: 100%;}
+  .main_visual .visual_txt {}
   .main_visual .visual_txt p:nth-child(1) {font-size: 40px;margin-bottom: 30px;line-height: 50px;}
   .main_visual .visual_txt p:nth-child(2) {font-size: 20px;line-height: 28px;}
 
@@ -165,16 +197,16 @@ section {padding-top: 64px;}
 
   .business_wrap {padding-top: 32px;}
   .business_wrap img {opacity: 0;}
-  .business_wrap h2, .management_wrap h2 {font-size: 36px;}
-  .business_wrap h2 span, .management_wrap h2 span {font-size: 14px;}
-  .business_wrap h2+p, .management_wrap h2+p {margin-bottom: 20px;font-size: 18px;}
+  .business_wrap h2, .manage_wrap h2 {font-size: 36px;}
+  .business_wrap h2 span, .manage_wrap h2 span {font-size: 14px;}
+  .business_wrap h2+p, .manage_wrap h2+p {margin-bottom: 20px;font-size: 18px;}
   .business_wrap .business>li {margin-bottom: 30px;}
   .business_wrap .busi_img {padding-top: 67.28395061%;}
   .business_wrap .busi_title {position: relative;left: 0;right: 0;padding-top: 20%;}
   .business_wrap h3 {position: absolute;left: 50%;top: 50%;transform:translate(-50%, -50%);font-size: 24px;white-space: nowrap;}
   .business_wrap .busi_fam {display: flex;flex-flow:row wrap;border: 1px solid #ccc;border-top: none;}
   .business_wrap .busi_fam li {width: 50%;}
-  .business_wrap .busi_fam li a {position: relative;display: block;padding-top: 36%;}/*30.95975232%*/
+  .business_wrap .busi_fam li a {position: relative;padding-top: 36%;}/*30.95975232%*/
   .business_wrap .busi_fam li span {display: inline-block;line-height: 20px;position: absolute;left: 50%;top: 50%;transform:translate(-50%, -50%);font-size: 18px;white-space: nowrap}
   .business_wrap .busi_fam li span:before {content:'';display: block;position: absolute;left: -12%;top: 50%;transform:translateY(-75%);width: 4px;height: 4px;background-color: #f36422;}
   .business_wrap .business>li:nth-child(1) .busi_fam li span:before {background-color: #f36422;}
